--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4",
-    "react-router-dom": "4.3.1",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
