Configure environment vars/secrets for redis and postgres. Initial persistent volume and ingress setup.

--- a/k8s/worker-deployment.yml
+++ b/k8s/worker-deployment.yml
@@ -15,7 +15,8 @@ spec:
       containers:
       - name: worker
         image: s1dequest/multi-worker
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        env:
+          - name: REDIS_HOST
+            value: redis-cluster-ip-service
+          - name: REDIS_PORT
+            value: '6379'
