--- a/k8s/server-deployment.yml
+++ b/k8s/server-deployment.yml
@@ -17,3 +17,22 @@ spec:
         image: s1dequest/multi-server
         ports:
         - containerPort: 5000
+        env:
+          - name: REDIS_HOST
+            value: redis-cluster-ip-service
+          - name: REDIS_PORT
+            value: '6379'
+          - name: PGHOST
+            value: postgres-deployment
+          - name: PGPORT
+            value: '5432'
+          - name: PGUSER
+            value: postgres
+          - name: PGDATABASE
+            value: postgres
+          - name: PGPASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: pgpassword
+                key: PGPASSWORD
+
