--- a/k8s/postgres-deployment.yml
+++ b/k8s/postgres-deployment.yml
@@ -18,7 +18,7 @@ spec:
             claimName: database-persistent-volume-claim
       containers:
       - name: postgres
-        image: postgres
+        image: postgres:12.0-alpine
         ports:
         - containerPort: 5432
         volumeMounts:
