--- a/k8s/server-deployment.yml
+++ b/k8s/server-deployment.yml
@@ -23,7 +23,7 @@ spec:
           - name: REDIS_PORT
             value: '6379'
           - name: PGHOST
-            value: postgres-deployment
+            value: postgres-cluster-ip-service
           - name: PGPORT
             value: '5432'
           - name: PGUSER
