--- a/k8s/ingress-service.yml
+++ b/k8s/ingress-service.yml
@@ -5,9 +5,28 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - maxzintel.dev
+        - www.maxzintel.dev
+      secretName: max-zintel-dev
   rules:
-    - http:
+    - host: maxzintel.dev
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.maxzintel.dev
+      http:
         paths:
           - path: /?(.*)
             backend:
